--- a/config/lovelace_huawei.yaml
+++ b/config/lovelace_huawei.yaml
@@ -1,9 +1,9 @@
 # Dashboard Huawei Solar - 3 kolumny PEŁNA SZEROKOŚĆ
 # Sections view - nowy layout HA który używa 100% szerokości ekranu
 
-title: Huawei Solar PV
+title: 🔥 TEST - HUAWEI SOLAR - TEST 🔥
 views:
-  - title: Przegląd
+  - title: 🔥 TEST Przegląd TEST 🔥
     icon: mdi:solar-power
     type: sections
     max_columns: 3
