--- a/config/template_sensors.yaml
+++ b/config/template_sensors.yaml
@@ -149,32 +149,22 @@
       unique_id: forecast_pv_today
       unit_of_measurement: "kWh"
       state: >
-        {% set wschod = states('sensor.pv_wschod_prognoza_dzis') | float(0) %}
-        {% set poludnie = states('sensor.pv_poludnie_prognoza_dzis') | float(0) %}
-        {% set zachod = states('sensor.pv_zachod_prognoza_dzis') | float(0) %}
-        {{ (wschod + poludnie + zachod) | round(1) }}
+        {{ states('sensor.energy_production_today') | float(0) | round(1) }}
       icon: mdi:solar-power
       attributes:
         friendly_name: "Prognoza produkcji PV dziś"
-        wschod: "{{ states('sensor.pv_wschod_prognoza_dzis') | float(0) | round(1) }} kWh"
-        poludnie: "{{ states('sensor.pv_poludnie_prognoza_dzis') | float(0) | round(1) }} kWh"
-        zachod: "{{ states('sensor.pv_zachod_prognoza_dzis') | float(0) | round(1) }} kWh"
+        source: "sensor.energy_production_today"
 
 - sensor:
     - name: "Prognoza PV jutro"
       unique_id: forecast_pv_tomorrow
       unit_of_measurement: "kWh"
       state: >
-        {% set wschod = states('sensor.pv_wschod_prognoza_jutro') | float(0) %}
-        {% set poludnie = states('sensor.pv_poludnie_prognoza_jutro') | float(0) %}
-        {% set zachod = states('sensor.pv_zachod_prognoza_jutro') | float(0) %}
-        {{ (wschod + poludnie + zachod) | round(1) }}
+        {{ states('sensor.energy_production_tomorrow') | float(0) | round(1) }}
       icon: mdi:solar-power
       attributes:
         friendly_name: "Prognoza produkcji PV jutro"
-        wschod: "{{ states('sensor.pv_wschod_prognoza_jutro') | float(0) | round(1) }} kWh"
-        poludnie: "{{ states('sensor.pv_poludnie_prognoza_jutro') | float(0) | round(1) }} kWh"
-        zachod: "{{ states('sensor.pv_zachod_prognoza_jutro') | float(0) | round(1) }} kWh"
+        source: "sensor.energy_production_tomorrow"
 
 - sensor:
     - name: "Prognoza PV 6h"
