TEST: Diagnostyka git pull - dodaj komentarz sprawdzający

--- a/config/lovelace_huawei.yaml
+++ b/config/lovelace_huawei.yaml
@@ -1,5 +1,6 @@
 # Dashboard Huawei Solar - 3 kolumny PEŁNA SZEROKOŚĆ
 # Sections view - nowy layout HA który używa 100% szerokości ekranu
+# COMMIT CHECK: b9e1bd2 - Test git pull
 
 title: Huawei Solar PV
 views:
